--- a/Content/03_Powering Up/b.Power Up.htm
+++ b/Content/03_Powering Up/b.Power Up.htm
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="798" MadCap:lastWidth="624">
     <head>
-        <link href="../../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <link href="../Resources/Table Stylesheets/CautionBoxStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../../Resources/Table Stylesheets/CautionBoxStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
@@ -11,7 +12,7 @@
         <p>1. Plug the DC cord of the AC adapter to the power connector at the back of the chassis as shown below.</p>
         <p>2. Plug the female end of the <i>AC power cord</i> into the <i>AC adapter</i> and the male end to an electrical outlet. <MadCap:conditionalText MadCap:conditions="Default.Print"><MadCap:conditionalText><MadCap:xref href="#pwr" class="ListOfPageNumber">(See  Fig 1.1 ) </MadCap:xref></MadCap:conditionalText></MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen"><MadCap:xref href="#pwr" class="ListOfPageNumber">(See </MadCap:xref><MadCap:xref href="#pwr">
 			Integris system power connections</MadCap:xref>)</MadCap:conditionalText></p>
-        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
+        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
             <col class="TableStyle-CautionBoxStyle-Column-Column1">
             </col>
             <tbody>
@@ -27,7 +28,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/2000/GETAK_Pwr_Connection.png" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 400px;" />
+                        <img src="../Resources/Images/2000/GETAK_Pwr_Connection.png" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 400px;" />
                     </td>
                 </tr>
                 <tr>
@@ -50,28 +51,29 @@
                 </tr>
             </tbody>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">Turning  the Computer On and Off</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">Turning  the Computer On and Off</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Turning  the Computer On and Off</h2>
         <p>1. Open the top cover by pulling the cover latch and lifting up the cover. You can tilt the cover forward or backward for optimal viewing clarity.</p>
         <p style="text-align: center;">
-            <img src="../../Resources/Images/2000/GETAK_Pwr_On.png" MadCap:mediastyle="@media print { width: 400px;height: auto; }" />
+            <img src="../Resources/Images/2000/GETAK_Pwr_On.png" MadCap:mediastyle="@media print { width: 400px;height: auto; }" />
         </p>
         <p class="FigNum01" MadCap:autonum=" Fig 1.2 ">Opening the Integris system</p>
-        <p>Press the <b>Power</b> button (<img src="../../Resources/Images/2000/Pwr_Button.png" MadCap:mediastyle="@media print { width: auto;height: 20px; }" /> ) at the rear of the keyboard. The Windows operating system should now start.</p>
+        <p>Press the <b>Power</b> button (<img src="../Resources/Images/2000/Pwr_Button.png" MadCap:mediastyle="@media print { width: auto;height: 20px; }" /> ) at the rear of the keyboard. The Windows operating system should now start.</p>
         <p style="text-align: center;">
-            <img src="../../Resources/Images/Integris_Power_Button.jpg" style="width: 400px;height: auto;" />
+            <img src="../Resources/Images/Integris_Power_Button.jpg" style="width: 400px;height: auto;" />
         </p>
         <p class="FigNum01" MadCap:autonum=" Fig 1.3 ">Integris power button</p>
         <p>When you finish a working session, you can stop the system by powering off the <i>Integris</i> system or leaving it in Sleep or in Hibernation mode:</p>
         <p><b>Power off</b>: Use the Windows Start menu in the lower left and follow the shutdown procedure.</p>
         <p><b>Sleep</b>: Press the power button or use the Windows Start menu to put the computer in Sleep mode.</p>
         <p><b>Hibernate</b>: Use the Windows <i>Start</i> menu to put the computer into Hibernation mode.</p>
-        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
+        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
             <col class="TableStyle-NoteBoxStyle01-Column-Column1">
             </col>
             <tbody>
                 <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
                     <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
-                        <p><b>Note:</b> “Sleep” is the default setting of the power button. You may change what the power button does in the Windows Control Panel.<![CDATA[              ]]></p>
+                        <p><b>Note:</b> “Sleep” is the default setting of the power button. You may change what the power button does in the Windows Control Panel.              </p>
                     </td>
                 </tr>
             </tbody>
