Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/b.Regulatory-old.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_1000/3A.1000_Getting_Started.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_1000/3B.1000_Configuration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_1000/a.Connecting_Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_1000/b.Integris_1000_Display.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_1000/z.System_Menu.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/j.QSG Exercise.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/x.APPENDICES----.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/x1.Hot Keys.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/z-old.BBU Emulation-old.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/z-old.Tests-RRH.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/4B._UNUSED-Configuration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/a2.Starting Integris 3000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b1.Integris_3000_Display.htm file:///C:/Users/H

--- a/Content/30_3000/a2.Starting Integris 3000.htm
+++ b/Content/30_3000/a2.Starting Integris 3000.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="836" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="848" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
@@ -24,16 +24,15 @@
 		
 		]]><MadCap:xref href="#GUI_Reset" class="ListOfPageNumber" MadCap:conditions="Default.Print">(See  Fig 1.1 )</MadCap:xref>.</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen"> 	in 
 		
-		<MadCap:xref href="#GUI_Reset" class="Simple" MadCap:conditions="Default.Screen">Fig 1.1</MadCap:xref>.</MadCap:conditionalText> 	</p>
+		<MadCap:xref href="#GUI_Reset" class="Simple" MadCap:conditions="Default.Screen">Fig 1.1</MadCap:xref>.</MadCap:conditionalText></p>
         <p>After the initial start up, the system will remember the last settings<MadCap:conditionalText MadCap:conditions="Default.Screen"> and will typically appear as in 
-			<MadCap:xref href="#GUI_Typ" class="Simple">Fig 1.2</MadCap:xref>.</MadCap:conditionalText> 
-			<MadCap:xref href="#GUI_Typ" class="ListOfPageNumber" MadCap:conditions="Default.Print">(See  Fig 1.2 )</MadCap:xref>.</p>
+			<MadCap:xref href="#GUI_Typ" class="Simple">Fig 1.2</MadCap:xref>.</MadCap:conditionalText><MadCap:xref href="#GUI_Typ" class="ListOfPageNumber" MadCap:conditions="Default.Print">(See  Fig 1.2 )</MadCap:xref>.</p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
             <tbody>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyD-Column1-Body1">
-                        <img src="../Resources/Images/3000/3.1/3k_GUI-AfterReset.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="width: 300px;height: auto;" />
+                        <img src="../Resources/Images/3000/V4/Reset-GUI.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="width: 300px;height: auto;" />
                     </td>
                 </tr>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
