--- a/Content/30_3000/b1.Integris_3000_Display.htm
+++ b/Content/30_3000/b1.Integris_3000_Display.htm
@@ -3,8 +3,8 @@
     <head><title>The Integris 3000 Display</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">The Integris 3000 Display</h2>
-        <h2 class="AA_Online_H2">The Integris 3000 Display</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">The Integris 3000 Display</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">The Integris 3000 Display</h2>
         <p>The Integris 3000 display consists of six main areas <MadCap:xref href="#The_Integris_3000_Screen" class="ListOfPageNumber">(See  Figure 1. 1: ) </MadCap:xref></p>
         <ol>
             <li><b>System Status</b> This displays quick reference values showing how key parameters have been set. If System &gt; Source is set to <i>Live</i> it additionally shows the link status (Options: Red “Down”, Green “OK”).
@@ -14,7 +14,7 @@
 				</MadCap:xref>)</MadCap:conditionalText></p><table style="margin-left: auto;margin-right: auto;"><col></col><tbody><tr><td style="text-align: center;"><img src="../Resources/Images/Labelled_Screen_Display.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 500px; }"></img></td></tr><tr style="height: 14px;"><td style="text-align: center;"><p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="The_Integris_3000_Screen"></a>The Integris 3000 Screen</p></td></tr></tbody></table></li>
             <li><b>Record Trace &amp;&#160;Snapshot:</b> Record a trace file to be replayed later,
 				 or take and display screen shots.
-<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range"> </MadCap:xref><MadCap:conditionalText><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c10.Snapshot.htm">Taking a Screen Snapshot
+<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range"> <![CDATA[ ]]></MadCap:xref><MadCap:conditionalText><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c10.Snapshot.htm">Taking a Screen Snapshot
 				</MadCap:xref></MadCap:xref></MadCap:conditionalText>)
            </p></li>
             <li>
